clusters/raspberrypi/apps/ghost/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  namespace: ghost
  labels:
    app: ghost
spec:
  nodeSelector:
    disktype: premium-ssd
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      nodeSelector:
        disktype: premium-ssd
      containers:
      - name: ghost
        image: ghost:5
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-pvc
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "2Gi"
        ports:
        - containerPort: 2368
      volumes:
      - name: ghost-pvc
        persistentVolumeClaim:
          claimName: ghost-pvc
