clusters/raspberrypi/apps/ghost/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  namespace: ghost
spec:
  ports:
  - port: 2368
    protocal: TCP
    targetPort: 2368
  selector:
    app: ghost
#ClusterIP: 10.43.102.51
