clusters/raspberrypi/apps/ghost/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: ghost-svc
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - rmblau
